--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:44:21 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:45:04 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -145,7 +145,7 @@ body {
       <td>Scottie Scheffler(W) -5
 -2 thru 12</td>
       <td>Hideki Matsuyama -2
--2 thru 12</td>
+-2 thru 13</td>
       <td>Will Zalatoris -1
 E (F)</td>
       <td>Cameron Smith E
@@ -169,7 +169,7 @@ E (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +1
 +3 (F)</td>
       <td class="greyout">Justin Thomas(W) +2
--2 thru 12</td>
+-2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Wilson</td>
@@ -229,7 +229,7 @@ E (F)</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Justin Thomas(W) +2
--2 thru 12</td>
+-2 thru 13</td>
       <td class="greyout leftborder">Brooks Koepka +6
 +3 (F)</td>
       <td class="greyout">Jordan Spieth +6
@@ -273,7 +273,7 @@ E (F)</td>
       <td>Shane Lowry -3
 -4 thru 16</td>
       <td>Hideki Matsuyama -2
--2 thru 12</td>
+-2 thru 13</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Cameron Smith(W) E
@@ -391,7 +391,7 @@ E (F)</td>
       <td>Cameron Smith E
 +4 thru 14</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
--2 thru 12</td>
+-2 thru 13</td>
       <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
     </tr>
@@ -447,7 +447,7 @@ E (F)</td>
       <td class="bigbold">Ron Harrington</td>
       <td class="bigbold">-2</td>
       <td>Hideki Matsuyama -2
--2 thru 12</td>
+-2 thru 13</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Cameron Smith E
@@ -511,13 +511,13 @@ E (F)</td>
       <td class="bigbold">Bill Hunter</td>
       <td class="bigbold">-1</td>
       <td>Hideki Matsuyama -2
--2 thru 12</td>
+-2 thru 13</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Cameron Smith(W) E
 +4 thru 14</td>
       <td>Justin Thomas +2
--2 thru 12</td>
+-2 thru 13</td>
       <td class="greyout leftborder">Marc Leishman +4
 +3 (F)</td>
       <td class="greyout">Xander Schauffele +7
@@ -531,7 +531,7 @@ E (F)</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
       <td>Justin Thomas(W) +2
--2 thru 12</td>
+-2 thru 13</td>
       <td>Rory McIlroy +2
 +1 (F)</td>
       <td class="greyout leftborder">Viktor Hovland +4
@@ -559,7 +559,7 @@ E (F)</td>
       <td class="bigbold">Shane Hosegood</td>
       <td class="bigbold">0</td>
       <td>Hideki Matsuyama -2
--2 thru 12</td>
+-2 thru 13</td>
       <td>Collin Morikawa(W) -1
 -2 (F)</td>
       <td>Patrick Cantlay +1
@@ -572,22 +572,6 @@ E (F)</td>
 Out With Injury</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">0</td>
-      <td>Corey Conners(W) -1
-+1 (F)</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Daniel Berger E
-+1 thru 14</td>
-      <td>Robert MacIntyre +2
-+1 (F)</td>
-      <td class="greyout leftborder">Jon Rahm +2
-E (F)</td>
-      <td class="greyout">Jordan Spieth +6
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Baggy Pants</td>
       <td class="bigbold">0</td>
       <td>Shane Lowry -3
@@ -597,7 +581,7 @@ E (F)</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
       <td>Justin Thomas(W) +2
--2 thru 12</td>
+-2 thru 13</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +4 (F)</td>
       <td class="greyout">Brooks Koepka +6
@@ -618,6 +602,22 @@ E (F)</td>
 +4 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">1</td>
+      <td>Corey Conners(W) -1
++1 (F)</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Daniel Berger +1
++2 thru 15</td>
+      <td>Robert MacIntyre +2
++1 (F)</td>
+      <td class="greyout leftborder">Jon Rahm +2
+E (F)</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">BCREAMED</td>
@@ -645,7 +645,7 @@ E (F)</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
       <td>Justin Thomas(W) +2
--2 thru 12</td>
+-2 thru 13</td>
       <td class="greyout leftborder">Brooks Koepka +6
 +3 (F)</td>
       <td class="greyout">Xander Schauffele +7
@@ -663,7 +663,7 @@ E (F)</td>
       <td>Rory McIlroy +2
 +1 (F)</td>
       <td class="greyout leftborder">Justin Thomas +2
--2 thru 12</td>
+-2 thru 13</td>
       <td class="greyout">Viktor Hovland +4
 +4 (F)</td>
     </tr>
@@ -675,7 +675,7 @@ E (F)</td>
       <td>Will Zalatoris -1
 E (F)</td>
       <td>Justin Thomas(W) +2
--2 thru 12</td>
+-2 thru 13</td>
       <td>Rory McIlroy +2
 +1 (F)</td>
       <td class="greyout leftborder">Jon Rahm +2
@@ -691,7 +691,7 @@ E (F)</td>
       <td>Will Zalatoris -1
 E (F)</td>
       <td>Justin Thomas(W) +2
--2 thru 12</td>
+-2 thru 13</td>
       <td>Brooks Koepka +6
 +3 (F)</td>
       <td class="greyout leftborder">Xander Schauffele +7
@@ -703,13 +703,13 @@ Missed Cut</td>
       <td class="bigbold">Jack Fleck</td>
       <td class="bigbold">2</td>
       <td>Hideki Matsuyama -2
--2 thru 12</td>
+-2 thru 13</td>
       <td>Cameron Smith E
 +4 thru 14</td>
       <td>Rory McIlroy(W) +2
 +1 (F)</td>
       <td>Justin Thomas +2
--2 thru 12</td>
+-2 thru 13</td>
       <td class="greyout leftborder">Tiger Woods +2
 +3 thru 13</td>
       <td class="greyout">Xander Schauffele +7
@@ -767,13 +767,13 @@ E (F)</td>
       <td class="bigbold">Roy Jeffrey A</td>
       <td class="bigbold">3</td>
       <td>Hideki Matsuyama -2
--2 thru 12</td>
+-2 thru 13</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
       <td>Jon Rahm(W) +2
 E (F)</td>
       <td>Justin Thomas +2
--2 thru 12</td>
+-2 thru 13</td>
       <td class="greyout leftborder">Brooks Koepka +6
 +3 (F)</td>
       <td class="greyout">Jordan Spieth +6
@@ -819,26 +819,10 @@ E (F)</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
       <td>Justin Thomas(W) +2
--2 thru 12</td>
+-2 thru 13</td>
       <td>Brooks Koepka +6
 +3 (F)</td>
       <td class="greyout leftborder">Jordan Spieth +6
-+4 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">5</td>
-      <td>Daniel Berger E
-+1 thru 14</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 12</td>
-      <td>Jon Rahm +2
-E (F)</td>
-      <td class="greyout leftborder">Viktor Hovland +4
 +4 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
@@ -867,7 +851,7 @@ E (F)</td>
       <td>Rory McIlroy +2
 +1 (F)</td>
       <td>Justin Thomas +2
--2 thru 12</td>
+-2 thru 13</td>
       <td>Tiger Woods +2
 +3 thru 13</td>
       <td class="greyout leftborder">Viktor Hovland +4
@@ -883,7 +867,7 @@ E (F)</td>
       <td>Cameron Smith(W) E
 +4 thru 14</td>
       <td>Justin Thomas +2
--2 thru 12</td>
+-2 thru 13</td>
       <td>Viktor Hovland +4
 +4 (F)</td>
       <td class="greyout leftborder">Jordan Spieth +6
@@ -901,7 +885,7 @@ E (F)</td>
       <td>Rory McIlroy +2
 +1 (F)</td>
       <td>Justin Thomas +2
--2 thru 12</td>
+-2 thru 13</td>
       <td class="greyout leftborder">Jordan Spieth +6
 +4 (F)</td>
       <td class="greyout">Xander Schauffele +7
@@ -922,6 +906,22 @@ E (F)</td>
 +4 (F)</td>
       <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">6</td>
+      <td>Daniel Berger +1
++2 thru 15</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Justin Thomas(W) +2
+-2 thru 13</td>
+      <td>Jon Rahm +2
+E (F)</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
@@ -945,7 +945,7 @@ E (F)</td>
       <td>Will Zalatoris -1
 E (F)</td>
       <td>Justin Thomas(W) +2
--2 thru 12</td>
+-2 thru 13</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td>Viktor Hovland +4
@@ -979,7 +979,7 @@ E (F)</td>
       <td>Jon Rahm(W) +2
 E (F)</td>
       <td>Justin Thomas +2
--2 thru 12</td>
+-2 thru 13</td>
       <td>Viktor Hovland +4
 +4 (F)</td>
       <td class="greyout leftborder">Brooks Koepka +6
@@ -997,7 +997,7 @@ E (F)</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td>Justin Thomas +2
--2 thru 12</td>
+-2 thru 13</td>
       <td class="greyout leftborder">Brooks Koepka +6
 +3 (F)</td>
       <td class="greyout">Xander Schauffele +7
@@ -1011,7 +1011,7 @@ E (F)</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
       <td>Justin Thomas(W) +2
--2 thru 12</td>
+-2 thru 13</td>
       <td>Brooks Koepka +6
 +3 (F)</td>
       <td class="greyout leftborder">Jordan Spieth +6
@@ -1041,7 +1041,7 @@ E (F)</td>
       <td>Cameron Smith E
 +4 thru 14</td>
       <td>Justin Thomas(W) +2
--2 thru 12</td>
+-2 thru 13</td>
       <td>Rory McIlroy +2
 +1 (F)</td>
       <td>Sam Burns +5
@@ -1057,7 +1057,7 @@ E (F)</td>
       <td>Jon Rahm(W) +2
 E (F)</td>
       <td>Justin Thomas +2
--2 thru 12</td>
+-2 thru 13</td>
       <td>Viktor Hovland +4
 +4 (F)</td>
       <td>Brooks Koepka +6
@@ -1071,7 +1071,7 @@ Missed Cut</td>
       <td class="bigbold">Yellow in Augusta</td>
       <td class="bigbold">14</td>
       <td>Justin Thomas(W) +2
--2 thru 12</td>
+-2 thru 13</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td>Viktor Hovland +4
@@ -1087,7 +1087,7 @@ E (F)</td>
       <td class="bigbold">Bryan Francis</td>
       <td class="bigbold">14</td>
       <td>Justin Thomas(W) +2
--2 thru 12</td>
+-2 thru 13</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td>Viktor Hovland +4
