--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:44:21 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:45:04 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -153,7 +153,7 @@ E (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +1
 +3 (F)</td>
       <td class="greyout">Justin Thomas(W) +2
--2 thru 12</td>
+-2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -183,7 +183,7 @@ E (F)</td>
       <td>Cameron Smith E
 +4 thru 14</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
--2 thru 12</td>
+-2 thru 13</td>
       <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
     </tr>
@@ -204,22 +204,6 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-2</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Tony Finau E
-+1 thru 12</td>
-      <td>Daniel Berger E
-+1 thru 14</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
--2 thru 12</td>
-      <td class="greyout">Brooks Koepka +6
-+3 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">-1</td>
       <td>Shane Lowry -3
@@ -229,7 +213,7 @@ E (F)</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
       <td>Justin Thomas(W) +2
--2 thru 12</td>
+-2 thru 13</td>
       <td class="greyout leftborder">Jon Rahm +2
 E (F)</td>
       <td class="greyout">Tyrrell Hatton +2
@@ -245,21 +229,37 @@ E (F)</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
       <td>Justin Thomas +2
--2 thru 12</td>
+-2 thru 13</td>
       <td class="greyout leftborder">Viktor Hovland(W) +4
 +4 (F)</td>
       <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">-1</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Tony Finau E
++1 thru 12</td>
+      <td>Daniel Berger +1
++2 thru 15</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
+-2 thru 13</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">1</td>
       <td>Corey Conners(W) -1
 +1 (F)</td>
       <td>Collin Morikawa -1
 -2 (F)</td>
-      <td>Daniel Berger E
-+1 thru 14</td>
+      <td>Daniel Berger +1
++2 thru 15</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td class="greyout leftborder">Robert MacIntyre +2
@@ -275,7 +275,7 @@ E (F)</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Justin Thomas +2
--2 thru 12</td>
+-2 thru 13</td>
       <td>Russell Henley +3
 +2 (F)</td>
       <td class="greyout leftborder">Xander Schauffele(W) +7
@@ -307,7 +307,7 @@ Missed Cut</td>
       <td>Cameron Smith E
 +4 thru 14</td>
       <td>Justin Thomas +2
--2 thru 12</td>
+-2 thru 13</td>
       <td>Rory McIlroy +2
 +1 (F)</td>
       <td class="greyout leftborder">Tommy Fleetwood(W) +3
@@ -355,7 +355,7 @@ E (F)</td>
       <td>Cameron Smith(W) E
 +4 thru 14</td>
       <td>Justin Thomas +2
--2 thru 12</td>
+-2 thru 13</td>
       <td>Viktor Hovland +4
 +4 (F)</td>
       <td class="greyout leftborder">Jordan Spieth +6
@@ -385,7 +385,7 @@ E (F)</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Justin Thomas(W) +2
--2 thru 12</td>
+-2 thru 13</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td>Jordan Spieth +6
