--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:47:56 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:48:39 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -444,6 +444,22 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">-3</td>
+      <td>Shane Lowry(W) -3
+-4 thru 16</td>
+      <td>Joaquin Niemann -3
+E thru 14</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout leftborder">Sam Burns +5
++2 (F)</td>
+      <td class="greyout">Brian Harman +5
++3 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Ron Harrington</td>
       <td class="bigbold">-2</td>
       <td>Hideki Matsuyama -2
@@ -457,22 +473,6 @@ E (F)</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
 E (F)</td>
       <td class="greyout">Brooks Koepka +6
-+3 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Low Golf IQ</td>
-      <td class="bigbold">-2</td>
-      <td>Shane Lowry(W) -3
--4 thru 16</td>
-      <td>Joaquin Niemann -2
-+1 thru 13</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout leftborder">Sam Burns +5
-+2 (F)</td>
-      <td class="greyout">Brian Harman +5
 +3 (F)</td>
     </tr>
     <tr>
@@ -828,6 +828,22 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Barb Wellard</td>
+      <td class="bigbold">4</td>
+      <td>Joaquin Niemann -3
+E thru 14</td>
+      <td>Cameron Smith E
++4 thru 14</td>
+      <td>Jon Rahm(W) +2
+E (F)</td>
+      <td>Sam Burns +5
++2 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Downhill Down Wind</td>
       <td class="bigbold">4</td>
       <td>Collin Morikawa(W) -1
@@ -841,22 +857,6 @@ E (F)</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +4 (F)</td>
       <td class="greyout">Gary Woodland +8
-+5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Barb Wellard</td>
-      <td class="bigbold">5</td>
-      <td>Joaquin Niemann -2
-+1 thru 13</td>
-      <td>Cameron Smith E
-+4 thru 14</td>
-      <td>Jon Rahm(W) +2
-E (F)</td>
-      <td>Sam Burns +5
-+2 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
     <tr>
