--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:54:23 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:55:06 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,15 +141,15 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Doug Muir</td>
-      <td class="bigbold">-10</td>
+      <td class="bigbold">-11</td>
       <td>Scottie Scheffler(W) -5
 -2 thru 12</td>
       <td>Hideki Matsuyama -2
 -2 thru 13</td>
+      <td>Cameron Smith -1
++3 thru 15</td>
       <td>Will Zalatoris -1
 E (F)</td>
-      <td>Cameron Smith E
-+4 thru 14</td>
       <td class="greyout leftborder">Jordan Spieth +6
 +4 (F)</td>
       <td class="greyout">Xander Schauffele +7
@@ -172,6 +172,54 @@ E (F)</td>
 -2 thru 13</td>
     </tr>
     <tr>
+      <td class="bigbold">Team Steve</td>
+      <td class="bigbold">-8</td>
+      <td>Scottie Scheffler -5
+-2 thru 12</td>
+      <td>Shane Lowry -3
+-4 thru 16</td>
+      <td>Cameron Smith(W) -1
++3 thru 15</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">-8</td>
+      <td>Scottie Scheffler -5
+-2 thru 12</td>
+      <td>Cameron Smith(W) -1
++3 thru 15</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td class="greyout leftborder">Russell Henley +3
++2 (F)</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Mark MacKave</td>
+      <td class="bigbold">-8</td>
+      <td>Scottie Scheffler -5
+-2 thru 12</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Cameron Smith -1
++3 thru 15</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout">Xander Schauffele(W) +7
++5 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Matt Wilson</td>
       <td class="bigbold">-7</td>
       <td>Scottie Scheffler(W) -5
@@ -188,36 +236,20 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Team Steve</td>
+      <td class="bigbold">The Resort</td>
       <td class="bigbold">-7</td>
-      <td>Scottie Scheffler -5
--2 thru 12</td>
       <td>Shane Lowry -3
 -4 thru 16</td>
-      <td>Cameron Smith(W) E
-+4 thru 14</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout">Brooks Koepka +6
-+3 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-7</td>
-      <td>Scottie Scheffler -5
--2 thru 12</td>
+      <td>Hideki Matsuyama -2
+-2 thru 13</td>
+      <td>Cameron Smith(W) -1
++3 thru 15</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Will Zalatoris -1
+      <td class="greyout leftborder">Jon Rahm +2
 E (F)</td>
-      <td>Cameron Smith(W) E
-+4 thru 14</td>
-      <td class="greyout leftborder">Russell Henley +3
-+2 (F)</td>
-      <td class="greyout">Brooks Koepka +6
-+3 (F)</td>
+      <td class="greyout">Viktor Hovland +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
@@ -236,20 +268,20 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Mark MacKave</td>
+      <td class="bigbold">Tom Davis</td>
       <td class="bigbold">-7</td>
-      <td>Scottie Scheffler -5
--2 thru 12</td>
+      <td>Shane Lowry -3
+-4 thru 16</td>
+      <td>Dustin Johnson(W) -2
++1 (F)</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Cameron Smith E
-+4 thru 14</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout">Xander Schauffele(W) +7
-+5 (F)</td>
+      <td>Cameron Smith -1
++3 thru 15</td>
+      <td class="greyout leftborder">Patrick Cantlay +1
++3 (F)</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Albert Selina</td>
@@ -268,36 +300,20 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">The Resort</td>
+      <td class="bigbold">Luke Watson</td>
       <td class="bigbold">-6</td>
-      <td>Shane Lowry -3
--4 thru 16</td>
-      <td>Hideki Matsuyama -2
--2 thru 13</td>
+      <td>Scottie Scheffler -5
+-2 thru 12</td>
+      <td>Cameron Smith(W) -1
++3 thru 15</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Cameron Smith(W) E
-+4 thru 14</td>
-      <td class="greyout leftborder">Jon Rahm +2
-E (F)</td>
-      <td class="greyout">Viktor Hovland +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Tom Davis</td>
-      <td class="bigbold">-6</td>
-      <td>Shane Lowry -3
--4 thru 16</td>
-      <td>Dustin Johnson(W) -2
-+1 (F)</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Cameron Smith E
-+4 thru 14</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
+      <td>Talor Gooch +1
++1 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka +6
 +3 (F)</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">CRED</td>
@@ -316,20 +332,20 @@ Missed Cut</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Luke Watson</td>
+      <td class="bigbold">Walk 2</td>
       <td class="bigbold">-5</td>
       <td>Scottie Scheffler -5
 -2 thru 12</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Cameron Smith(W) E
-+4 thru 14</td>
-      <td>Talor Gooch +1
-+1 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
+      <td>Cameron Smith -1
++3 thru 15</td>
+      <td>Tyrrell Hatton +2
++2 (F)</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +4
++4 (F)</td>
+      <td class="greyout">Sam Burns +5
++2 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
@@ -348,6 +364,22 @@ Missed Cut</td>
 E (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-5</td>
+      <td>Shane Lowry -3
+-4 thru 16</td>
+      <td>Cameron Smith -1
++3 thru 15</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Matthew Fitzpatrick E
++1 (F)</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
+-2 thru 13</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
       <td class="bigbold">-5</td>
       <td>Shane Lowry -3
@@ -364,48 +396,32 @@ E (F)</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Walk 2</td>
-      <td class="bigbold">-4</td>
-      <td>Scottie Scheffler -5
--2 thru 12</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Cameron Smith E
-+4 thru 14</td>
-      <td>Tyrrell Hatton +2
-+2 (F)</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +4
-+4 (F)</td>
-      <td class="greyout">Sam Burns +5
-+2 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-4</td>
-      <td>Shane Lowry -3
--4 thru 16</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Matthew Fitzpatrick E
-+1 (F)</td>
-      <td>Cameron Smith E
-+4 thru 14</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
--2 thru 13</td>
-      <td class="greyout">Brooks Koepka +6
-+3 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">The Dub</td>
-      <td class="bigbold">-4</td>
+      <td class="bigbold">-5</td>
       <td>Scottie Scheffler -5
 -2 thru 12</td>
-      <td>Cameron Smith(W) E
-+4 thru 14</td>
+      <td>Cameron Smith(W) -1
++3 thru 15</td>
       <td>Matthew Fitzpatrick E
 +1 (F)</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Uphill into the Wind</td>
+      <td class="bigbold">-4</td>
+      <td>Scottie Scheffler(W) -5
+-2 thru 12</td>
+      <td>Cameron Smith -1
++3 thru 15</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Billy Horschel +3
++1 (F)</td>
       <td class="greyout leftborder">Brooks Koepka +6
 +3 (F)</td>
       <td class="greyout">Xander Schauffele +7
@@ -428,20 +444,20 @@ E (F)</td>
 +2 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Uphill into the Wind</td>
+      <td class="bigbold">Ron Harrington</td>
       <td class="bigbold">-3</td>
-      <td>Scottie Scheffler(W) -5
--2 thru 12</td>
-      <td>Cameron Smith E
-+4 thru 14</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Billy Horschel +3
+      <td>Hideki Matsuyama -2
+-2 thru 13</td>
+      <td>Corey Conners -1
 +1 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +6
+      <td>Cameron Smith -1
++3 thru 15</td>
+      <td>Talor Gooch +1
++1 thru 17</td>
+      <td class="greyout leftborder">Jon Rahm(W) +2
+E (F)</td>
+      <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
@@ -460,35 +476,51 @@ E thru 14</td>
 +3 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Ron Harrington</td>
-      <td class="bigbold">-2</td>
-      <td>Hideki Matsuyama -2
--2 thru 13</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Cameron Smith E
-+4 thru 14</td>
-      <td>Talor Gooch +1
-+1 thru 17</td>
-      <td class="greyout leftborder">Jon Rahm(W) +2
-E (F)</td>
-      <td class="greyout">Brooks Koepka +6
-+3 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">-2</td>
       <td>Corey Conners -1
 +1 (F)</td>
+      <td>Cameron Smith -1
++3 thru 15</td>
       <td>Will Zalatoris -1
 E (F)</td>
-      <td>Cameron Smith E
-+4 thru 14</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
 E (F)</td>
       <td class="greyout">Viktor Hovland +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Bill Hunter</td>
+      <td class="bigbold">-2</td>
+      <td>Hideki Matsuyama -2
+-2 thru 13</td>
+      <td>Cameron Smith(W) -1
++3 thru 15</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Justin Thomas +2
+-2 thru 13</td>
+      <td class="greyout leftborder">Marc Leishman +4
++3 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Santorini Sunrises</td>
+      <td class="bigbold">-1</td>
+      <td>Corey Conners(W) -1
++1 (F)</td>
+      <td>Cameron Smith -1
++3 thru 15</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Jon Rahm +2
+E (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout">Jordan Spieth +6
 +4 (F)</td>
     </tr>
     <tr>
@@ -508,20 +540,20 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Bill Hunter</td>
+      <td class="bigbold">Baggy Pants</td>
       <td class="bigbold">-1</td>
-      <td>Hideki Matsuyama -2
--2 thru 13</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Cameron Smith(W) E
-+4 thru 14</td>
-      <td>Justin Thomas +2
--2 thru 13</td>
-      <td class="greyout leftborder">Marc Leishman +4
+      <td>Shane Lowry -3
+-4 thru 16</td>
+      <td>Cameron Smith -1
++3 thru 15</td>
+      <td>Patrick Cantlay +1
 +3 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
+      <td>Justin Thomas(W) +2
+-2 thru 13</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunsets</td>
@@ -540,22 +572,6 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunrises</td>
-      <td class="bigbold">0</td>
-      <td>Corey Conners(W) -1
-+1 (F)</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Cameron Smith E
-+4 thru 14</td>
-      <td>Jon Rahm +2
-E (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Jordan Spieth +6
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Shane Hosegood</td>
       <td class="bigbold">0</td>
       <td>Hideki Matsuyama -2
@@ -572,20 +588,36 @@ E (F)</td>
 Out With Injury</td>
     </tr>
     <tr>
-      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">BCREAMED</td>
       <td class="bigbold">0</td>
-      <td>Shane Lowry -3
--4 thru 16</td>
-      <td>Cameron Smith E
-+4 thru 14</td>
+      <td>Scottie Scheffler -5
+-2 thru 12</td>
+      <td>Cameron Smith(W) -1
++3 thru 15</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 13</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout">Brooks Koepka +6
+      <td>Sam Burns +5
++2 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +6
 +3 (F)</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">0</td>
+      <td>Hideki Matsuyama -2
+-2 thru 13</td>
+      <td>Cameron Smith -1
++3 thru 15</td>
+      <td>Tiger Woods +1
++2 thru 14</td>
+      <td>Rory McIlroy(W) +2
++1 (F)</td>
+      <td class="greyout leftborder">Justin Thomas +2
+-2 thru 13</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
@@ -600,6 +632,22 @@ E (F)</td>
 E (F)</td>
       <td class="greyout leftborder">Viktor Hovland(W) +4
 +4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Don Shaw</td>
+      <td class="bigbold">1</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Cameron Smith -1
++3 thru 15</td>
+      <td>Tiger Woods +1
++2 thru 14</td>
+      <td>Jon Rahm(W) +2
+E (F)</td>
+      <td class="greyout leftborder">Sam Burns +5
++2 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
@@ -620,20 +668,20 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">BCREAMED</td>
+      <td class="bigbold">New Lu</td>
       <td class="bigbold">1</td>
-      <td>Scottie Scheffler -5
--2 thru 12</td>
-      <td>Cameron Smith(W) E
-+4 thru 14</td>
+      <td>Cameron Smith -1
++3 thru 15</td>
+      <td>Will Zalatoris -1
+E (F)</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
-      <td>Sam Burns +5
-+2 (F)</td>
+      <td>Justin Thomas(W) +2
+-2 thru 13</td>
       <td class="greyout leftborder">Brooks Koepka +6
 +3 (F)</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Ez Game Ez Life</td>
@@ -650,54 +698,6 @@ E (F)</td>
 -2 thru 13</td>
       <td class="greyout">Viktor Hovland +4
 +4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">1</td>
-      <td>Hideki Matsuyama -2
--2 thru 13</td>
-      <td>Cameron Smith E
-+4 thru 14</td>
-      <td>Tiger Woods +1
-+2 thru 14</td>
-      <td>Rory McIlroy(W) +2
-+1 (F)</td>
-      <td class="greyout leftborder">Justin Thomas +2
--2 thru 13</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">2</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Cameron Smith E
-+4 thru 14</td>
-      <td>Tiger Woods +1
-+2 thru 14</td>
-      <td>Jon Rahm(W) +2
-E (F)</td>
-      <td class="greyout leftborder">Sam Burns +5
-+2 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">New Lu</td>
-      <td class="bigbold">2</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Cameron Smith E
-+4 thru 14</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 13</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jabby</td>
@@ -764,6 +764,22 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Barb Wellard</td>
+      <td class="bigbold">3</td>
+      <td>Joaquin Niemann -3
+E thru 14</td>
+      <td>Cameron Smith -1
++3 thru 15</td>
+      <td>Jon Rahm(W) +2
+E (F)</td>
+      <td>Sam Burns +5
++2 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Roy Jeffrey A</td>
       <td class="bigbold">3</td>
       <td>Hideki Matsuyama -2
@@ -828,22 +844,6 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Barb Wellard</td>
-      <td class="bigbold">4</td>
-      <td>Joaquin Niemann -3
-E thru 14</td>
-      <td>Cameron Smith E
-+4 thru 14</td>
-      <td>Jon Rahm(W) +2
-E (F)</td>
-      <td>Sam Burns +5
-+2 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Downhill Down Wind</td>
       <td class="bigbold">4</td>
       <td>Collin Morikawa(W) -1
@@ -861,11 +861,11 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">4</td>
+      <td>Cameron Smith(W) -1
++3 thru 15</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Cameron Smith(W) E
-+4 thru 14</td>
       <td>Justin Thomas +2
 -2 thru 13</td>
       <td>Viktor Hovland +4
@@ -890,6 +890,22 @@ E (F)</td>
 +4 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glitter Girl</td>
+      <td class="bigbold">5</td>
+      <td>Cameron Smith -1
++3 thru 15</td>
+      <td>Jon Rahm(W) +2
+E (F)</td>
+      <td>Rory McIlroy +2
++1 (F)</td>
+      <td>Bubba Watson +2
++1 (F)</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
@@ -922,22 +938,6 @@ E (F)</td>
 +4 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">6</td>
-      <td>Cameron Smith E
-+4 thru 14</td>
-      <td>Jon Rahm(W) +2
-E (F)</td>
-      <td>Rory McIlroy +2
-+1 (F)</td>
-      <td>Bubba Watson +2
-+1 (F)</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout">Jordan Spieth +6
-+4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
@@ -1037,9 +1037,9 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Benjac</td>
-      <td class="bigbold">9</td>
-      <td>Cameron Smith E
-+4 thru 14</td>
+      <td class="bigbold">8</td>
+      <td>Cameron Smith -1
++3 thru 15</td>
       <td>Justin Thomas(W) +2
 -2 thru 13</td>
       <td>Rory McIlroy +2
