--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:54:23 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:55:06 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -173,15 +173,15 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-4</td>
+      <td class="bigbold">-5</td>
       <td>Shane Lowry -3
 -4 thru 16</td>
+      <td>Cameron Smith -1
++3 thru 15</td>
       <td>Will Zalatoris -1
 E (F)</td>
       <td>Matthew Fitzpatrick E
 +1 (F)</td>
-      <td>Cameron Smith E
-+4 thru 14</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
 -2 thru 13</td>
       <td class="greyout">Brooks Koepka +6
@@ -189,13 +189,13 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Larry Judge</td>
-      <td class="bigbold">-3</td>
+      <td class="bigbold">-4</td>
       <td>Scottie Scheffler(W) -5
 -2 thru 12</td>
+      <td>Cameron Smith -1
++3 thru 15</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Cameron Smith E
-+4 thru 14</td>
       <td>Sam Burns +5
 +2 (F)</td>
       <td class="greyout leftborder">Jordan Spieth +6
@@ -253,11 +253,11 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">0</td>
       <td>Joaquin Niemann -3
 E thru 14</td>
-      <td>Cameron Smith E
-+4 thru 14</td>
+      <td>Cameron Smith -1
++3 thru 15</td>
       <td>Justin Thomas +2
 -2 thru 13</td>
       <td>Rory McIlroy +2
@@ -266,6 +266,22 @@ E thru 14</td>
 E thru 15</td>
       <td class="greyout">Viktor Hovland +4
 +4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">John Nixon</td>
+      <td class="bigbold">1</td>
+      <td>Cameron Smith(W) -1
++3 thru 15</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Rory McIlroy +2
++1 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -300,22 +316,6 @@ E (F)</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">John Nixon</td>
-      <td class="bigbold">2</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Cameron Smith(W) E
-+4 thru 14</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Rory McIlroy +2
-+1 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">2</td>
       <td>Collin Morikawa -1
@@ -332,6 +332,22 @@ E (F)</td>
 +3 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">4</td>
+      <td>Cameron Smith(W) -1
++3 thru 15</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Justin Thomas +2
+-2 thru 13</td>
+      <td>Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">5</td>
       <td>Dustin Johnson -2
@@ -346,22 +362,6 @@ E (F)</td>
 +4 (F)</td>
       <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">5</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Cameron Smith(W) E
-+4 thru 14</td>
-      <td>Justin Thomas +2
--2 thru 13</td>
-      <td>Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +6
-+4 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
