--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:55:49 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:56:32 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -237,17 +237,17 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">0</td>
       <td>Collin Morikawa -1
 -2 (F)</td>
       <td>Will Zalatoris -1
 E (F)</td>
       <td>Tony Finau E
 +1 thru 12</td>
-      <td>Daniel Berger +1
-+2 thru 15</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
+      <td>Justin Thomas(W) +2
 -2 thru 13</td>
+      <td class="greyout leftborder">Daniel Berger +2
++3 thru 16</td>
       <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
     </tr>
@@ -263,7 +263,7 @@ E thru 14</td>
       <td>Rory McIlroy +2
 +1 (F)</td>
       <td class="greyout leftborder">Tommy Fleetwood(W) +3
-E thru 15</td>
+E thru 16</td>
       <td class="greyout">Viktor Hovland +4
 +4 (F)</td>
     </tr>
@@ -282,22 +282,6 @@ E thru 15</td>
 +3 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">1</td>
-      <td>Corey Conners(W) -1
-+1 (F)</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Daniel Berger +1
-+2 thru 15</td>
-      <td>Jon Rahm +2
-E (F)</td>
-      <td class="greyout leftborder">Robert MacIntyre +2
-+1 (F)</td>
-      <td class="greyout">Jordan Spieth +6
-+4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
@@ -330,6 +314,22 @@ E (F)</td>
 +4 (F)</td>
       <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">2</td>
+      <td>Corey Conners(W) -1
++1 (F)</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Jon Rahm +2
+E (F)</td>
+      <td>Daniel Berger +2
++3 thru 16</td>
+      <td class="greyout leftborder">Robert MacIntyre +2
++1 (F)</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
