--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 6:00:51 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 6:01:34 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -165,11 +165,11 @@ E (F)</td>
       <td>Will Zalatoris -1
 E (F)</td>
       <td>Tony Finau E
-+1 thru 12</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
++1 thru 13</td>
+      <td class="greyout leftborder">Justin Thomas(W) +1
+-3 thru 14</td>
+      <td class="greyout">Patrick Cantlay +1
 +3 (F)</td>
-      <td class="greyout">Justin Thomas(W) +2
--2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Team Steve</td>
@@ -204,6 +204,22 @@ E (F)</td>
 +3 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Stan and Ollie Garch</td>
+      <td class="bigbold">-9</td>
+      <td>Scottie Scheffler -6
+-3 thru 13</td>
+      <td>Shane Lowry -3
+-4 thru 16</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Justin Thomas(W) +1
+-3 thru 14</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Mark MacKave</td>
       <td class="bigbold">-9</td>
       <td>Scottie Scheffler -6
@@ -234,22 +250,6 @@ E (F)</td>
 +4 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Stan and Ollie Garch</td>
-      <td class="bigbold">-8</td>
-      <td>Scottie Scheffler -6
--3 thru 13</td>
-      <td>Shane Lowry -3
--4 thru 16</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 13</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Jordan Spieth +6
-+4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Albert Selina</td>
@@ -390,8 +390,8 @@ E (F)</td>
 E (F)</td>
       <td>Matthew Fitzpatrick E
 +1 (F)</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
--2 thru 13</td>
+      <td class="greyout leftborder">Justin Thomas(W) +1
+-3 thru 14</td>
       <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
     </tr>
@@ -419,7 +419,7 @@ E (F)</td>
       <td>Dustin Johnson(W) -2
 +1 (F)</td>
       <td>Tony Finau E
-+1 thru 12</td>
++1 thru 13</td>
       <td>Matthew Fitzpatrick E
 +1 (F)</td>
       <td class="greyout leftborder">Jordan Spieth +6
@@ -442,6 +442,22 @@ E (F)</td>
 +4 (F)</td>
       <td class="greyout">Sam Burns +5
 +2 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Bill Hunter</td>
+      <td class="bigbold">-3</td>
+      <td>Hideki Matsuyama -2
+-2 thru 14</td>
+      <td>Cameron Smith(W) -1
++3 thru 15</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Justin Thomas +1
+-3 thru 14</td>
+      <td class="greyout leftborder">Marc Leishman +4
++3 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Ron Harrington</td>
@@ -476,6 +492,22 @@ E thru 14</td>
 +3 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">-2</td>
+      <td>Scottie Scheffler -6
+-3 thru 13</td>
+      <td>Justin Thomas(W) +1
+-3 thru 14</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Rory McIlroy +2
++1 (F)</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
       <td class="bigbold">-2</td>
       <td>Corey Conners -1
@@ -492,36 +524,20 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Bill Hunter</td>
+      <td class="bigbold">Baggy Pants</td>
       <td class="bigbold">-2</td>
-      <td>Hideki Matsuyama -2
--2 thru 14</td>
-      <td>Cameron Smith(W) -1
+      <td>Shane Lowry -3
+-4 thru 16</td>
+      <td>Cameron Smith -1
 +3 thru 15</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Justin Thomas +2
--2 thru 13</td>
-      <td class="greyout leftborder">Marc Leishman +4
-+3 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">-1</td>
-      <td>Scottie Scheffler -6
--3 thru 13</td>
+      <td>Justin Thomas(W) +1
+-3 thru 14</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 13</td>
-      <td>Rory McIlroy +2
-+1 (F)</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +4 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunrises</td>
@@ -572,20 +588,20 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">Jack Fleck</td>
       <td class="bigbold">-1</td>
-      <td>Shane Lowry -3
--4 thru 16</td>
+      <td>Hideki Matsuyama -2
+-2 thru 14</td>
       <td>Cameron Smith -1
 +3 thru 15</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 13</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout">Brooks Koepka +6
-+3 (F)</td>
+      <td>Justin Thomas +1
+-3 thru 14</td>
+      <td>Tiger Woods +1
++2 thru 14</td>
+      <td class="greyout leftborder">Rory McIlroy(W) +2
++1 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
@@ -604,20 +620,52 @@ E (F)</td>
 Out With Injury</td>
     </tr>
     <tr>
-      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">New Lu</td>
       <td class="bigbold">0</td>
-      <td>Hideki Matsuyama -2
--2 thru 14</td>
       <td>Cameron Smith -1
 +3 thru 15</td>
-      <td>Tiger Woods +1
-+2 thru 14</td>
-      <td>Rory McIlroy(W) +2
-+1 (F)</td>
-      <td class="greyout leftborder">Justin Thomas +2
--2 thru 13</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Justin Thomas(W) +1
+-3 thru 14</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">0</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Tiger Woods(W) +1
++2 thru 14</td>
+      <td>Justin Thomas +1
+-3 thru 14</td>
+      <td class="greyout leftborder">Rory McIlroy +2
++1 (F)</td>
+      <td class="greyout">Viktor Hovland +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Wylie</td>
+      <td class="bigbold">0</td>
+      <td>Scottie Scheffler -6
+-3 thru 13</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Justin Thomas(W) +1
+-3 thru 14</td>
+      <td>Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout leftborder">Xander Schauffele +7
++5 (F)</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
@@ -652,52 +700,36 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">New Lu</td>
+      <td class="bigbold">Jabby</td>
       <td class="bigbold">1</td>
-      <td>Cameron Smith -1
-+3 thru 15</td>
+      <td>Corey Conners -1
++1 (F)</td>
       <td>Will Zalatoris -1
 E (F)</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 13</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">1</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Tiger Woods(W) +1
-+2 thru 14</td>
+      <td>Justin Thomas(W) +1
+-3 thru 14</td>
       <td>Rory McIlroy +2
 +1 (F)</td>
-      <td class="greyout leftborder">Justin Thomas +2
--2 thru 13</td>
-      <td class="greyout">Viktor Hovland +4
-+4 (F)</td>
+      <td class="greyout leftborder">Jon Rahm +2
+E (F)</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Wylie</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">Philip Dale</td>
+      <td class="bigbold">2</td>
       <td>Scottie Scheffler -6
 -3 thru 13</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 13</td>
+      <td>Justin Thomas(W) +1
+-3 thru 14</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
       <td>Brooks Koepka +6
 +3 (F)</td>
-      <td class="greyout leftborder">Xander Schauffele +7
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -716,20 +748,20 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Jabby</td>
+      <td class="bigbold">Roy Jeffrey A</td>
       <td class="bigbold">2</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 13</td>
-      <td>Rory McIlroy +2
-+1 (F)</td>
-      <td class="greyout leftborder">Jon Rahm +2
-E (F)</td>
-      <td class="greyout">Brooks Koepka +6
+      <td>Hideki Matsuyama -2
+-2 thru 14</td>
+      <td>Patrick Cantlay +1
 +3 (F)</td>
+      <td>Justin Thomas +1
+-3 thru 14</td>
+      <td>Jon Rahm(W) +2
+E (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Fred Jamieson</td>
@@ -769,7 +801,7 @@ E (F)</td>
       <td>Collin Morikawa -1
 -2 (F)</td>
       <td>Tony Finau E
-+1 thru 12</td>
++1 thru 13</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
       <td>Jon Rahm(W) +2
@@ -796,22 +828,6 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Philip Dale</td>
-      <td class="bigbold">3</td>
-      <td>Scottie Scheffler -6
--3 thru 13</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 13</td>
-      <td>Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +6
-+4 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Barb Wellard</td>
       <td class="bigbold">3</td>
       <td>Joaquin Niemann -3
@@ -828,32 +844,16 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">3</td>
-      <td>Hideki Matsuyama -2
--2 thru 14</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Jon Rahm(W) +2
-E (F)</td>
-      <td>Justin Thomas +2
--2 thru 13</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Jordan Spieth +6
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">3</td>
       <td>Collin Morikawa(W) -1
 -2 (F)</td>
+      <td>Justin Thomas +1
+-3 thru 14</td>
       <td>Tiger Woods +1
 +2 thru 14</td>
       <td>Rory McIlroy +2
 +1 (F)</td>
-      <td>Justin Thomas +2
--2 thru 13</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +4 (F)</td>
       <td class="greyout">Gary Woodland +8
@@ -861,13 +861,13 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">3</td>
       <td>Cameron Smith(W) -1
 +3 thru 15</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Justin Thomas +2
--2 thru 13</td>
+      <td>Justin Thomas +1
+-3 thru 14</td>
       <td>Viktor Hovland +4
 +4 (F)</td>
       <td class="greyout leftborder">Jordan Spieth +6
@@ -877,15 +877,15 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Brian McDonald</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">4</td>
       <td>Corey Conners -1
 +1 (F)</td>
+      <td>Justin Thomas +1
+-3 thru 14</td>
       <td>Jon Rahm(W) +2
 E (F)</td>
       <td>Rory McIlroy +2
 +1 (F)</td>
-      <td>Justin Thomas +2
--2 thru 13</td>
       <td class="greyout leftborder">Jordan Spieth +6
 +4 (F)</td>
       <td class="greyout">Xander Schauffele +7
@@ -924,6 +924,38 @@ E (F)</td>
 +3 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">6</td>
+      <td>Justin Thomas(W) +1
+-3 thru 14</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Daniel Berger +2
++3 thru 16</td>
+      <td>Jon Rahm +2
+E (F)</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">6</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Justin Thomas(W) +1
+-3 thru 14</td>
+      <td>Jon Rahm +2
+E (F)</td>
+      <td>Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout leftborder">Sam Burns +5
++2 (F)</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">6</td>
       <td>Scottie Scheffler -6
@@ -940,46 +972,14 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">7</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 13</td>
-      <td>Daniel Berger +2
-+3 thru 16</td>
-      <td>Jon Rahm +2
-E (F)</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">7</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 13</td>
-      <td>Jon Rahm +2
-E (F)</td>
-      <td>Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout leftborder">Sam Burns +5
-+2 (F)</td>
-      <td class="greyout">Jordan Spieth +6
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">6</td>
       <td>Will Zalatoris -1
 E (F)</td>
+      <td>Justin Thomas +1
+-3 thru 14</td>
       <td>Jon Rahm(W) +2
 E (F)</td>
-      <td>Justin Thomas +2
--2 thru 13</td>
       <td>Viktor Hovland +4
 +4 (F)</td>
       <td class="greyout leftborder">Brooks Koepka +6
@@ -989,15 +989,15 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">6</td>
       <td>Patrick Cantlay(W) +1
 +3 (F)</td>
+      <td>Justin Thomas +1
+-3 thru 14</td>
       <td>Rory McIlroy +2
 +1 (F)</td>
       <td>Jon Rahm +2
 E (F)</td>
-      <td>Justin Thomas +2
--2 thru 13</td>
       <td class="greyout leftborder">Brooks Koepka +6
 +3 (F)</td>
       <td class="greyout">Xander Schauffele +7
@@ -1005,19 +1005,35 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">NewCastle Magpies</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">7</td>
       <td>Collin Morikawa -1
 -2 (F)</td>
+      <td>Justin Thomas(W) +1
+-3 thru 14</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 13</td>
       <td>Brooks Koepka +6
 +3 (F)</td>
       <td class="greyout leftborder">Jordan Spieth +6
 +4 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Benjac</td>
+      <td class="bigbold">7</td>
+      <td>Cameron Smith -1
++3 thru 15</td>
+      <td>Justin Thomas(W) +1
+-3 thru 14</td>
+      <td>Rory McIlroy +2
++1 (F)</td>
+      <td>Sam Burns +5
++2 (F)</td>
+      <td class="greyout leftborder">Xander Schauffele +7
++5 (F)</td>
+      <td class="greyout">Justin Rose +8
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -1036,28 +1052,12 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Benjac</td>
-      <td class="bigbold">8</td>
-      <td>Cameron Smith -1
-+3 thru 15</td>
-      <td>Justin Thomas(W) +2
--2 thru 13</td>
-      <td>Rory McIlroy +2
-+1 (F)</td>
-      <td>Sam Burns +5
-+2 (F)</td>
-      <td class="greyout leftborder">Xander Schauffele +7
-+5 (F)</td>
-      <td class="greyout">Justin Rose +8
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Tony Muir</td>
-      <td class="bigbold">14</td>
+      <td class="bigbold">13</td>
+      <td>Justin Thomas +1
+-3 thru 14</td>
       <td>Jon Rahm(W) +2
 E (F)</td>
-      <td>Justin Thomas +2
--2 thru 13</td>
       <td>Viktor Hovland +4
 +4 (F)</td>
       <td>Brooks Koepka +6
@@ -1069,9 +1069,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Yellow in Augusta</td>
-      <td class="bigbold">14</td>
-      <td>Justin Thomas(W) +2
--2 thru 13</td>
+      <td class="bigbold">13</td>
+      <td>Justin Thomas(W) +1
+-3 thru 14</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td>Viktor Hovland +4
@@ -1085,9 +1085,9 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Bryan Francis</td>
-      <td class="bigbold">14</td>
-      <td>Justin Thomas(W) +2
--2 thru 13</td>
+      <td class="bigbold">13</td>
+      <td>Justin Thomas(W) +1
+-3 thru 14</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td>Viktor Hovland +4
