--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 6:00:51 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 6:01:34 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -149,11 +149,11 @@ body {
       <td>Will Zalatoris -1
 E (F)</td>
       <td>Tony Finau E
-+1 thru 12</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
++1 thru 13</td>
+      <td class="greyout leftborder">Justin Thomas(W) +1
+-3 thru 14</td>
+      <td class="greyout">Patrick Cantlay +1
 +3 (F)</td>
-      <td class="greyout">Justin Thomas(W) +2
--2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -198,22 +198,22 @@ E (F)</td>
 E (F)</td>
       <td>Matthew Fitzpatrick E
 +1 (F)</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
--2 thru 13</td>
+      <td class="greyout leftborder">Justin Thomas(W) +1
+-3 thru 14</td>
       <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">-2</td>
       <td>Shane Lowry -3
 -4 thru 16</td>
       <td>Corey Conners -1
 +1 (F)</td>
+      <td>Justin Thomas(W) +1
+-3 thru 14</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 13</td>
       <td class="greyout leftborder">Jon Rahm +2
 E (F)</td>
       <td class="greyout">Tyrrell Hatton +2
@@ -221,15 +221,15 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">-2</td>
       <td>Sungjae Im -3
 +2 (F)</td>
       <td>Collin Morikawa -1
 -2 (F)</td>
+      <td>Justin Thomas +1
+-3 thru 14</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
-      <td>Justin Thomas +2
--2 thru 13</td>
       <td class="greyout leftborder">Viktor Hovland(W) +4
 +4 (F)</td>
       <td class="greyout">Brooks Koepka +6
@@ -237,15 +237,15 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">-1</td>
       <td>Collin Morikawa -1
 -2 (F)</td>
       <td>Will Zalatoris -1
 E (F)</td>
       <td>Tony Finau E
-+1 thru 12</td>
-      <td>Justin Thomas(W) +2
--2 thru 13</td>
++1 thru 13</td>
+      <td>Justin Thomas(W) +1
+-3 thru 14</td>
       <td class="greyout leftborder">Daniel Berger +2
 +3 thru 16</td>
       <td class="greyout">Brooks Koepka +6
@@ -253,19 +253,35 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">-1</td>
       <td>Joaquin Niemann -3
 E thru 14</td>
       <td>Cameron Smith -1
 +3 thru 15</td>
-      <td>Justin Thomas +2
--2 thru 13</td>
+      <td>Justin Thomas +1
+-3 thru 14</td>
       <td>Rory McIlroy +2
 +1 (F)</td>
       <td class="greyout leftborder">Tommy Fleetwood(W) +3
 E thru 16</td>
       <td class="greyout">Viktor Hovland +4
 +4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jamie Watters</td>
+      <td class="bigbold">1</td>
+      <td>Dustin Johnson -2
++1 (F)</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Justin Thomas +1
+-3 thru 14</td>
+      <td>Russell Henley +3
++2 (F)</td>
+      <td class="greyout leftborder">Xander Schauffele(W) +7
++5 (F)</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
@@ -284,28 +300,12 @@ E thru 16</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">2</td>
-      <td>Dustin Johnson -2
-+1 (F)</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Justin Thomas +2
--2 thru 13</td>
-      <td>Russell Henley +3
-+2 (F)</td>
-      <td class="greyout leftborder">Xander Schauffele(W) +7
-+5 (F)</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">2</td>
       <td>Collin Morikawa -1
 -2 (F)</td>
       <td>Tony Finau E
-+1 thru 12</td>
++1 thru 13</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
       <td>Jon Rahm(W) +2
@@ -333,13 +333,13 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">3</td>
       <td>Cameron Smith(W) -1
 +3 thru 15</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Justin Thomas +2
--2 thru 13</td>
+      <td>Justin Thomas +1
+-3 thru 14</td>
       <td>Viktor Hovland +4
 +4 (F)</td>
       <td class="greyout leftborder">Jordan Spieth +6
@@ -381,11 +381,11 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">9</td>
+      <td class="bigbold">8</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 13</td>
+      <td>Justin Thomas(W) +1
+-3 thru 14</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td>Jordan Spieth +6
