--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 6:06:35 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 6:07:18 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -268,22 +268,6 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Luke Watson</td>
-      <td class="bigbold">-7</td>
-      <td>Scottie Scheffler -6
--3 thru 13</td>
-      <td>Cameron Smith(W) -1
-+3 thru 16</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Talor Gooch +1
-+1 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">The Resort</td>
       <td class="bigbold">-7</td>
       <td>Shane Lowry -3
@@ -346,6 +330,22 @@ Missed Cut</td>
 +4 (F)</td>
       <td class="greyout">Sam Burns +5
 +2 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Luke Watson</td>
+      <td class="bigbold">-6</td>
+      <td>Scottie Scheffler -6
+-3 thru 13</td>
+      <td>Cameron Smith(W) -1
++3 thru 16</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Talor Gooch +2
++2 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
@@ -460,22 +460,6 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Ron Harrington</td>
-      <td class="bigbold">-3</td>
-      <td>Hideki Matsuyama -2
--2 thru 14</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Cameron Smith -1
-+3 thru 16</td>
-      <td>Talor Gooch +1
-+1 thru 17</td>
-      <td class="greyout leftborder">Jon Rahm(W) +2
-E (F)</td>
-      <td class="greyout">Brooks Koepka +6
-+3 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">-3</td>
       <td>Shane Lowry(W) -3
@@ -522,6 +506,22 @@ E (F)</td>
 E (F)</td>
       <td class="greyout">Viktor Hovland +4
 +4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ron Harrington</td>
+      <td class="bigbold">-2</td>
+      <td>Hideki Matsuyama -2
+-2 thru 14</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Cameron Smith -1
++3 thru 16</td>
+      <td>Jon Rahm(W) +2
+E (F)</td>
+      <td class="greyout leftborder">Talor Gooch +2
++2 (F)</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Baggy Pants</td>
