--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 6:27:22 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 6:28:05 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -157,15 +157,15 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-10</td>
+      <td class="bigbold">-11</td>
       <td>Scottie Scheffler -6
 -3 thru 14</td>
       <td>Shane Lowry -3
 -4 (F)</td>
+      <td>Justin Thomas(W) -1
+-5 thru 16</td>
       <td>Will Zalatoris -1
 E (F)</td>
-      <td>Justin Thomas(W) E
--4 thru 15</td>
       <td class="greyout leftborder">Patrick Cantlay +1
 +3 (F)</td>
       <td class="greyout">Tony Finau +1
@@ -173,15 +173,15 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
-      <td class="bigbold">-10</td>
+      <td class="bigbold">-11</td>
       <td>Scottie Scheffler -6
 -3 thru 14</td>
       <td>Shane Lowry -3
 -4 (F)</td>
+      <td>Justin Thomas(W) -1
+-5 thru 16</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Justin Thomas(W) E
--4 thru 15</td>
       <td class="greyout leftborder">Brooks Koepka +6
 +3 (F)</td>
       <td class="greyout">Jordan Spieth +6
@@ -364,6 +364,38 @@ Missed Cut</td>
 E (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Bill Hunter</td>
+      <td class="bigbold">-6</td>
+      <td>Hideki Matsuyama -3
+-3 thru 15</td>
+      <td>Cameron Smith(W) -1
++3 thru 17</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Justin Thomas -1
+-5 thru 16</td>
+      <td class="greyout leftborder">Marc Leishman +4
++3 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-6</td>
+      <td>Shane Lowry -3
+-4 (F)</td>
+      <td>Justin Thomas(W) -1
+-5 thru 16</td>
+      <td>Cameron Smith -1
++3 thru 17</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick E
++1 (F)</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">The Dub</td>
       <td class="bigbold">-6</td>
       <td>Scottie Scheffler -6
@@ -380,38 +412,6 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Bill Hunter</td>
-      <td class="bigbold">-5</td>
-      <td>Hideki Matsuyama -3
--3 thru 15</td>
-      <td>Cameron Smith(W) -1
-+3 thru 17</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Justin Thomas E
--4 thru 15</td>
-      <td class="greyout leftborder">Marc Leishman +4
-+3 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-5</td>
-      <td>Shane Lowry -3
--4 (F)</td>
-      <td>Cameron Smith -1
-+3 thru 17</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Justin Thomas(W) E
--4 thru 15</td>
-      <td class="greyout leftborder">Matthew Fitzpatrick E
-+1 (F)</td>
-      <td class="greyout">Brooks Koepka +6
-+3 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Uphill into the Wind</td>
       <td class="bigbold">-5</td>
       <td>Scottie Scheffler(W) -6
@@ -424,6 +424,22 @@ E (F)</td>
 +1 (F)</td>
       <td class="greyout leftborder">Brooks Koepka +6
 +3 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">-4</td>
+      <td>Scottie Scheffler -6
+-3 thru 14</td>
+      <td>Justin Thomas(W) -1
+-5 thru 16</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Rory McIlroy +2
++1 (F)</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
@@ -460,18 +476,34 @@ E (F)</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">-3</td>
-      <td>Scottie Scheffler -6
--3 thru 14</td>
-      <td>Justin Thomas(W) E
--4 thru 15</td>
+      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">-4</td>
+      <td>Shane Lowry -3
+-4 (F)</td>
+      <td>Justin Thomas(W) -1
+-5 thru 16</td>
+      <td>Cameron Smith -1
++3 thru 17</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
-      <td>Rory McIlroy +2
-+1 (F)</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +4 (F)</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">-4</td>
+      <td>Hideki Matsuyama -3
+-3 thru 15</td>
+      <td>Cameron Smith -1
++3 thru 17</td>
+      <td>Justin Thomas -1
+-5 thru 16</td>
+      <td>Tiger Woods +1
++2 thru 16</td>
+      <td class="greyout leftborder">Rory McIlroy(W) +2
++1 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
@@ -490,38 +522,6 @@ E (F)</td>
 +2 (F)</td>
       <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Baggy Pants</td>
-      <td class="bigbold">-3</td>
-      <td>Shane Lowry -3
--4 (F)</td>
-      <td>Cameron Smith -1
-+3 thru 17</td>
-      <td>Justin Thomas(W) E
--4 thru 15</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout">Brooks Koepka +6
-+3 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-3</td>
-      <td>Hideki Matsuyama -3
--3 thru 15</td>
-      <td>Cameron Smith -1
-+3 thru 17</td>
-      <td>Justin Thomas E
--4 thru 15</td>
-      <td>Tiger Woods +1
-+2 thru 16</td>
-      <td class="greyout leftborder">Rory McIlroy(W) +2
-+1 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
@@ -554,6 +554,54 @@ E (F)</td>
 E (F)</td>
       <td class="greyout">Viktor Hovland +4
 +4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">New Lu</td>
+      <td class="bigbold">-2</td>
+      <td>Justin Thomas(W) -1
+-5 thru 16</td>
+      <td>Cameron Smith -1
++3 thru 17</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">-2</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Justin Thomas -1
+-5 thru 16</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Tiger Woods(W) +1
++2 thru 16</td>
+      <td class="greyout leftborder">Rory McIlroy +2
++1 (F)</td>
+      <td class="greyout">Viktor Hovland +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Wylie</td>
+      <td class="bigbold">-2</td>
+      <td>Scottie Scheffler -6
+-3 thru 14</td>
+      <td>Justin Thomas(W) -1
+-5 thru 16</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout leftborder">Xander Schauffele +7
++5 (F)</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunrises</td>
@@ -604,6 +652,22 @@ Out With Injury</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">-1</td>
+      <td>Hideki Matsuyama -3
+-3 thru 15</td>
+      <td>Justin Thomas -1
+-5 thru 16</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Jon Rahm(W) +2
+E (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Grace</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners -1
@@ -620,84 +684,36 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">New Lu</td>
-      <td class="bigbold">-1</td>
-      <td>Cameron Smith -1
-+3 thru 17</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Justin Thomas(W) E
--4 thru 15</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">-1</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Justin Thomas E
--4 thru 15</td>
-      <td>Tiger Woods(W) +1
-+2 thru 16</td>
-      <td class="greyout leftborder">Rory McIlroy +2
-+1 (F)</td>
-      <td class="greyout">Viktor Hovland +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Wylie</td>
-      <td class="bigbold">-1</td>
-      <td>Scottie Scheffler -6
--3 thru 14</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Justin Thomas(W) E
--4 thru 15</td>
-      <td>Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout leftborder">Xander Schauffele +7
-+5 (F)</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">0</td>
-      <td>Hideki Matsuyama -3
--3 thru 15</td>
-      <td>Justin Thomas E
--4 thru 15</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Jon Rahm(W) +2
-E (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Jordan Spieth +6
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jabby</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">-1</td>
+      <td>Justin Thomas(W) -1
+-5 thru 16</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Will Zalatoris -1
 E (F)</td>
-      <td>Justin Thomas(W) E
--4 thru 15</td>
       <td>Rory McIlroy +2
 +1 (F)</td>
       <td class="greyout leftborder">Jon Rahm +2
 E (F)</td>
       <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Philip Dale</td>
+      <td class="bigbold">0</td>
+      <td>Scottie Scheffler -6
+-3 thru 14</td>
+      <td>Justin Thomas(W) -1
+-5 thru 16</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
@@ -732,16 +748,32 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Philip Dale</td>
+      <td class="bigbold">Downhill Down Wind</td>
       <td class="bigbold">1</td>
-      <td>Scottie Scheffler -6
--3 thru 14</td>
-      <td>Justin Thomas(W) E
--4 thru 15</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Brooks Koepka +6
-+3 (F)</td>
+      <td>Collin Morikawa(W) -1
+-2 (F)</td>
+      <td>Justin Thomas -1
+-5 thru 16</td>
+      <td>Tiger Woods +1
++2 thru 16</td>
+      <td>Rory McIlroy +2
++1 (F)</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout">Gary Woodland +8
++5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">1</td>
+      <td>Cameron Smith(W) -1
++3 thru 17</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Justin Thomas -1
+-5 thru 16</td>
+      <td>Viktor Hovland +4
++4 (F)</td>
       <td class="greyout leftborder">Jordan Spieth +6
 +4 (F)</td>
       <td class="greyout">Xander Schauffele +7
@@ -764,32 +796,16 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">Brian McDonald</td>
       <td class="bigbold">2</td>
-      <td>Collin Morikawa(W) -1
--2 (F)</td>
-      <td>Justin Thomas E
--4 thru 15</td>
-      <td>Tiger Woods +1
-+2 thru 16</td>
-      <td>Rory McIlroy +2
-+1 (F)</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout">Gary Woodland +8
-+5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">2</td>
-      <td>Cameron Smith(W) -1
-+3 thru 17</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Justin Thomas E
--4 thru 15</td>
-      <td>Viktor Hovland +4
-+4 (F)</td>
+      <td>Justin Thomas -1
+-5 thru 16</td>
+      <td>Jon Rahm(W) +2
+E (F)</td>
+      <td>Rory McIlroy +2
++1 (F)</td>
       <td class="greyout leftborder">Jordan Spieth +6
 +4 (F)</td>
       <td class="greyout">Xander Schauffele +7
@@ -860,22 +876,6 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Brian McDonald</td>
-      <td class="bigbold">3</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Justin Thomas E
--4 thru 15</td>
-      <td>Jon Rahm(W) +2
-E (F)</td>
-      <td>Rory McIlroy +2
-+1 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +6
-+4 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">3</td>
       <td>Collin Morikawa -1
@@ -893,9 +893,9 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">5</td>
-      <td>Justin Thomas(W) E
--4 thru 15</td>
+      <td class="bigbold">4</td>
+      <td>Justin Thomas(W) -1
+-5 thru 16</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
       <td>Daniel Berger +2
@@ -909,11 +909,11 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">4</td>
+      <td>Justin Thomas(W) -1
+-5 thru 16</td>
       <td>Will Zalatoris -1
 E (F)</td>
-      <td>Justin Thomas(W) E
--4 thru 15</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td>Viktor Hovland +4
@@ -925,11 +925,11 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">4</td>
+      <td>Justin Thomas -1
+-5 thru 16</td>
       <td>Will Zalatoris -1
 E (F)</td>
-      <td>Justin Thomas E
--4 thru 15</td>
       <td>Jon Rahm(W) +2
 E (F)</td>
       <td>Viktor Hovland +4
@@ -941,9 +941,9 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">5</td>
-      <td>Justin Thomas E
--4 thru 15</td>
+      <td class="bigbold">4</td>
+      <td>Justin Thomas -1
+-5 thru 16</td>
       <td>Patrick Cantlay(W) +1
 +3 (F)</td>
       <td>Rory McIlroy +2
@@ -954,6 +954,38 @@ E (F)</td>
 +3 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">NewCastle Magpies</td>
+      <td class="bigbold">5</td>
+      <td>Justin Thomas(W) -1
+-5 thru 16</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Benjac</td>
+      <td class="bigbold">5</td>
+      <td>Justin Thomas(W) -1
+-5 thru 16</td>
+      <td>Cameron Smith -1
++3 thru 17</td>
+      <td>Rory McIlroy +2
++1 (F)</td>
+      <td>Sam Burns +5
++2 (F)</td>
+      <td class="greyout leftborder">Xander Schauffele +7
++5 (F)</td>
+      <td class="greyout">Justin Rose +8
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
@@ -988,22 +1020,6 @@ E (F)</td>
 +3 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">NewCastle Magpies</td>
-      <td class="bigbold">6</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Justin Thomas(W) E
--4 thru 15</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +6
-+4 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">6</td>
       <td>Scottie Scheffler -6
@@ -1018,22 +1034,6 @@ E (F)</td>
 +4 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Benjac</td>
-      <td class="bigbold">6</td>
-      <td>Cameron Smith -1
-+3 thru 17</td>
-      <td>Justin Thomas(W) E
--4 thru 15</td>
-      <td>Rory McIlroy +2
-+1 (F)</td>
-      <td>Sam Burns +5
-+2 (F)</td>
-      <td class="greyout leftborder">Xander Schauffele +7
-+5 (F)</td>
-      <td class="greyout">Justin Rose +8
-+4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -1053,9 +1053,9 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Tony Muir</td>
-      <td class="bigbold">12</td>
-      <td>Justin Thomas E
--4 thru 15</td>
+      <td class="bigbold">11</td>
+      <td>Justin Thomas -1
+-5 thru 16</td>
       <td>Jon Rahm(W) +2
 E (F)</td>
       <td>Viktor Hovland +4
@@ -1069,9 +1069,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Yellow in Augusta</td>
-      <td class="bigbold">12</td>
-      <td>Justin Thomas(W) E
--4 thru 15</td>
+      <td class="bigbold">11</td>
+      <td>Justin Thomas(W) -1
+-5 thru 16</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td>Viktor Hovland +4
@@ -1085,9 +1085,9 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Bryan Francis</td>
-      <td class="bigbold">12</td>
-      <td>Justin Thomas(W) E
--4 thru 15</td>
+      <td class="bigbold">11</td>
+      <td>Justin Thomas(W) -1
+-5 thru 16</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td>Viktor Hovland +4
